Update src/main/java/io/github/railroad/vcs/connections/hubs/GithubConnection.java
Co-authored-by: TurtyWurty <43997792+DaRealTurtyWurty@users.noreply.github.com>